removing the get started button

--- a/content/fips/fip_01.mdx
+++ b/content/fips/fip_01.mdx
@@ -1,14 +1,15 @@
 ---
-title: Offline transaction signing
-description: Offline Transaction Signing | Iron Fish Onboarding
+title: FIP
+description: FIIIP
+category: core
 ---
 
 Iron Fish allows you to create an account on a computer disconnected from the Internet, but still send and receive transactions with that account. Sending transactions by using an account stored on a disconnected computer is known as "offline signing."
 
 When signing transactions offline, you'll need to run two Iron Fish nodes:
 
-* **Online**: an online node that is connected to the Internet and the Iron Fish network
-* **Offline**: an offline node that holds your spending keys
+- **Online**: an online node that is connected to the Internet and the Iron Fish network
+- **Offline**: an offline node that holds your spending keys
 
 You'll also need a secure method of moving files between the online node and offline node, like an encrypted USB drive.
 
