--- a/content/fips/fip-2.mdx
+++ b/content/fips/fip-2.mdx
@@ -1,6 +1,7 @@
 ---
-title: Offline transaction signing
+title: Second FIP
 description: Offline Transaction Signing | Iron Fish Onboarding
+category: networking
 ---
 
 Iron Fish allows you to create an account on a computer disconnected from the Internet, but still send and receive transactions with that account. Sending transactions by using an account stored on a disconnected computer is known as "offline signing."
