--- a/content/fips/intro.mdx
+++ b/content/fips/intro.mdx
@@ -1,6 +1,5 @@
 ---
 title: Fish Improvement Proposal Process
-description: What are FIPs, how to use and get started with them.
 ---
 
 A FIP, which stands for [Iron] Fish Improvement Proposal, is a proposal to amend, change, introduce, or upgrade any part of the Iron Fish protocol, consensus, process or ecosystem. Proposals can range from introducing a change to the networking layer to naming convention or even to the Iron Fish governance process itself.
@@ -9,7 +8,7 @@ A FIP, which stands for [Iron] Fish Improvement Proposal, is a proposal to amend
 
 Before writing a FIP, make sure to have first discussed your idea on the [Discourse](https://discourse.ironfish.network/) site for Iron Fish and addressed any open questions. If you feel like you need more feedback, always feel free to advertise your idea on [Discord](https://discord.ironfish.network/).
 
-Once your idea is well formulated, and you’re ready to write an improvement proposal, please first read [FIP-0](./fip-0) and use it as a starting point. Once you have your draft, please make a pull request (PR) to the [FIP repository](https://github.com/iron-fish/FIPs).
+Once your idea is well formulated, and you’re ready to write an improvement proposal, please first read [FIP-0](/fips/fip-0) and use it as a starting point. Once you have your draft, please make a pull request (PR) to the [FIP repository](https://github.com/iron-fish/FIPs).
 
 ## FIP Categories
 
