--- a/content/fips/template.mdx
+++ b/content/fips/template.mdx
@@ -1,16 +1,17 @@
 ---
 title: FIP template
 description: description
-author: author
-discussions-to: discussions-to
-status: status
+author: FirstName LastName (GitHub)
+discussion: Discord link to the discussion around this proposal
+status: Idea
 category: template
-created: created
-requires: requires
+created: yyyy-mm-dd
+requires: optional field for dependencies on not finalized FIPs
 ---
 
 Please use this template to get started and delete comments before submitting yout PR.
-PR naming convention is: fip-title_of_this_fip.md
+
+PR naming convention is: `fip-title_of_this_fip.md`
 
 To read more about how to write a FIP, see https://fips.ironfish.network
 
