--- a/content/fips/fip-0.mdx
+++ b/content/fips/fip-0.mdx
@@ -1,6 +1,6 @@
 ---
 title: FIP-0
-description:
+description: FIP-0
 author: Elena <elena@ironfish.network>
 category: Meta
 ---
@@ -9,7 +9,7 @@ category: Meta
 
 A FIP, which stands for [Iron] Fish Improvement Proposal, is a proposal to amend, change, introduce, or upgrade any part of the Iron Fish protocol, consensus, process or ecosystem. Proposals can range from introducing a change to the networking layer to naming convention or even to the Iron Fish governance process itself.
 
-Please first read the [Fish Improvement Proposal Process](./intro) before writing your first FIP.
+Please first read the [Fish Improvement Proposal Process](/fips/intro) before writing your first FIP.
 
 ## How to write successful FIP
 
@@ -17,17 +17,17 @@ Focus on just **_one_** core idea for your proposal. If your idea requires multi
 
 Your FIP _must_ be written with the intent of goodwill for the protocol, project, or greater community. Anything that looks like spam or outwardly negative for the sake of being negative will be deleted and rejected by the FIP Stewards. Please don’t disclose severe bugs using a FIP and instead use the [bug bounty](https://hackerone.com/iron_fish_bbp?type=scope) program.
 
-Your FIP should mention the categories below, and you can use this [template](./template) to get started.
+Your FIP should mention the categories below, and you can use this [template](/fips/template) to get started.
 
 - Preamble - RFC 822 style header containing:
-  - Title: _in just a few words, what is proposal about?_
-  - Description: _one full sentence_
-  - Author: _a comma separated list of authors and their Github, Example: `FirstName LastName (GitHub), FirstName LastName (GitHub)_
-  - Discussions-To: _please provide a link to the Discourse thread that started this proposal_
-  - Satus: _Idea_
-  - Category: _either Core, Interface, Hardfork, or Meta_
-  - Created: _date created on in yyyy-mm-dd format_
-  - Requires (optional): _any dependencies on other non finalized FIPs_
+  - title: _in just a few words, what is proposal about?_
+  - description: _one full sentence_
+  - author: _a comma separated list of authors and their Github, Example: FirstName LastName (GitHub), FirstName LastName (GitHub)_
+  - discussion: _please provide a link to the Discourse thread that started this proposal_
+  - satus: _Idea_
+  - category: _either Core, Interface, Hardfork, or Meta_
+  - created: _date created on in yyyy-mm-dd format_
+  - requires (optional): _any dependencies on other non finalized FIPs_
 - Abstract - Technical summary. This is meant for others to quickly understand the gist of the proposal.
 - Motivation - **_Why_** this proposal is being made. What problem is it solving?
 - Specification - This should be the bulk of your FIP. What exactly are you proposing, and how can your proposal be implemented?
@@ -37,4 +37,4 @@ Your FIP should mention the categories below, and you can use this [template](./
 - Reference Implementation *(optional)* - An optional section that contains a reference/example implementation, or WIP code.
 - Copyright Waiver - All FIPs are in the public domain. The copyright waiver MUST link to the license file and use the following wording: `Copyright and related rights waived via CC0.`
 
-Ready? Reference this [template](./template) to get started.
+Ready? Reference this [template](/fips/template) to get started.
